  o Loring Holden added support to create missing directories on install
    and support for installs from outside the source directory.
  o Fabien COELHO added a pan and volume effect.
  o Fabien COELHO added a speed effect to sox (like speeding up a tape
    machine).  Also added pitch which changes pitch without effecting
    duration and stretch which stretch time without effecting pitch.

sox-12.16
---------
  
  o Changed raw data functions to perform I/O operations using block reads.
    Should improve speeds greatly, especially when filesize is in megs.
    Got code ready to tweak speed more which also forced me to clean up
    Endian test code.
  o Fixed a bug in .au's handling of G.723.  It wasn't using the correct
    number of bits.  Added A-law support to .au.
  o Quoted $filename in play/rec scripts so that files with spaces in
    their names can be given.
  o Old OS/2 support didn't work.  Replaced with known working EMX
    GCC compatible code.
  o ADPCM WAV files were defaulting to 8-bit outputs and thus losing
    some persision.  Now defaults to 16-bit signed uncompressed data.
  o Fixed a couple cross-platform compiler issues.
  o Jimen Ching has added support for "configure" in to SOX.  Finally,
    a good solution to cross-platform compiling!
  o Jimen Ching has added native support for the ALSA driver to play
    and record audio from. (jching@flex.com)
  o Minor correction for -r example in manual page.
  o Renamed sox.sh to soxeffect and rewrote.  Symbolic links can be made
    from this file to the name of a sox effect.  It will then run that
    effect on STDIN and output the results to STDOUT.
  o Fixed up some makefiles and 16-bit support from patches sent by
    Mark Morgan Lloyd (markMLl.in@telemetry.co.uk).  Also added some
    nice DOS test bat files from him as well.
  o Cleaned up some more cross-platform compile problems.  In the process
    got it working with Turbo C again, kinda.  It still locks DOS up at times.